[package]
name = "ulidd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1" }

chitchat = "0.7"
clap = { version = "4.5.8", features = ["derive", "env"] }
config = "0.14"

dashmap = "6"

futures = "0.3"
futures-util = "0.3"

humantime = "2"

mry = "0.8"

rand = "0.8"
rustls = "0.23"
rustls-pemfile = "2"

serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"

thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-serde-cbor = "*"
tracing = "0.1"
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "valuable"] }
trust-dns-resolver = "0.23"

ulid = { version = "1", features = ["serde"] }
tokio-util = "0.7"
webpki = "0.22"
webpki-roots = "0.26"

[dev-dependencies]
color-backtrace = "0.6"
console-subscriber = { version = "0.3.0" }
ctor = "0.2"

[[bin]]
name = "ulidd"
path = "src/bin/server.rs"
bench = false
test = false


[[example]]
name = "client"
path = "examples/client.rs"
bench = false
test = false
