[package]
name = "katotonic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1" }

chitchat = "0.7"
clap = { version = "4.5.8", features = ["derive", "env"] }
config = "0.14"
console-subscriber = { version = "0.3.0" }

dashmap = "6"

futures = "0.3"
futures-util = "0.3"
futures-rustls = { git = "https://github.com/rustls/futures-rustls", branch = "master" }

humantime = "2"

mry = "0.8"

portable-atomic = { version = "1.6.0" }

rand = "0.8"
rustls = "0.23"
rustls-pemfile = "2"

serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"

thiserror = "1"
tikv-jemallocator = { version = "0.6" }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "sync"] }
tokio-rustls = "0.26"
tokio-serde-cbor = "*"
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "valuable"] }
trust-dns-resolver = "0.23"

ulid = { version = "1", features = ["serde"] }

webpki = "0.22"
webpki-roots = "0.26"

crossbeam = { version = "0.8.4" }
threadpool = { version = "1.8.1", optional = true }
smol = { version = "2", optional = true }
async-executor = { version = "1.12.0", optional = true }
num_cpus = { version = "1.16.0", optional = true }
futures-lite = { version = "2.3.0", optional = true }
smolscale = { version = "0.4.7", optional = true }
async-compat = { version = "0.2.4", optional = true }
kanal = { version = "0.1.0-pre8" }
parking_lot = { version = "0.12.3" }
async-notify = { version = "0.3.0", optional = true }

[features]
default = []
smol = [
  "dep:smol",
  "dep:async-executor",
  "dep:num_cpus",
  "dep:futures-lite",
  "dep:smolscale",
  "dep:async-compat",
  "dep:async-notify",
]
blocking = ["dep:threadpool"]

[dev-dependencies]
color-backtrace = "0.6"
ctor = "0.2"
crossbeam = { version = "0.8.4" }

[[bin]]
name = "catotonic"
path = "src/bin/sync-server.rs"
bench = false
test = false
required-features = ["blocking"]

[[bin]]
name = "cbor-server"
path = "src/bin/cbor-server.rs"
bench = false
test = false

[[bin]]
name = "katotonic"
path = "src/bin/async-server.rs"
bench = false
test = false

[[bin]]
name = "kittytonic"
path = "src/bin/smol-server.rs"
bench = false
test = false
required-features = ["smol"]


[[example]]
name = "client"
path = "examples/client.rs"
bench = false
test = false

[[example]]
name = "sync-client"
path = "examples/sync-client.rs"
bench = false
test = false
required-features = ["blocking"]

[[example]]
name = "async-client"
path = "examples/async-client.rs"
bench = false
test = false

[[example]]
name = "smol-client"
path = "examples/smol-client.rs"
bench = false
test = false
required-features = ["smol"]
